--- a/TicTacToe/.classpath
+++ b/TicTacToe/.classpath
@@ -3,10 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tictactoetest"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry exported="true" kind="lib" path="ExternalLibs/appframework-1.0.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="ExternalLibs/swing-worker-1.1.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="lib" path="ExternalLibs/mysql-connector-java-5.1.18-bin.jar"/>
-	<classpathentry kind="lib" path="ExternalLibs/swing-layout-1.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
